--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,18 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@import url('https://fonts.googleapis.com/css2?family=DM+Mono:wght@400;500&family=DM+Sans:wght@400;500;700&family=Montserrat:wght@900&display=swap');
+:root{
+    --font-base:"Montserrat", sans-serif;
+    --primary-color:#edf2f8;
+    --secondary-color:#313bac;
+    --black-color:#030303;
+    --gray-color:#6b7688;
+    --lightGray-color:#e4e4e4;
+    --gray-brown-color:#6b7688;
+    --brown-color:#46364a;
+    --white-color:#ffffff;
 }
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+*{
+    padding: 0;
+    margin:0;
+    scroll-behavior: smooth;
+    box-sizing: border-box;
 }
